# Prediction-of-Loan-Eligibility

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/processed/: X_test.csv  X_test_norm.csv  X_train.csv  X_train_norm.csv  X_valid.csv  X_valid_norm.csv  y_test.csv  y_train.csv  y_valid.csv
models/: grid_search_ann.joblib  grid_search_knn.joblib  grid_search_logistic_regression.joblib
notebooks/: ann_model .ipynb  comparison of models and conclusion.ipynb  exploring _and_improve.ipynb  knn_model.ipynb  logistic_regression_model.ipynb  preprocessing.ipynb
